--- a/package.json
+++ b/package.json
@@ -14,8 +14,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap-vue": "^2.0.0-rc.8",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-api-service": "^0.1.3",
+    "vue-awesome": "^3.0.0",
+    "vue-localstorage": "^0.6.2",
+    "vue-resource": "^1.5.0",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
